# gst-plugin-jamesdsp

./: README.md  autobuild.sh  configure.ac  global.h  instructions.txt  map.txt
src/: AutoConvolver.c  Effect.cpp  Effect.h  EffectDSPMain.cpp  EffectDSPMain.h  JdspImpResToolbox.c  Makefile.am  gstinterface.h  gstjdspfx.cpp  gstjdspfx.h  reverb.c  vdc.c
src/valve/12ax7amp/.deps/: libgstjdspfx_la-Tube.Plo  libgstjdspfx_la-wdfcircuits_triode.Plo
